# tasks

./: README.md
.github/workflows/: api.yml
services/tasks_api/: .flake8  main.py  models.py  package.json  pyproject.toml  serverless.yml  tests.py
